--- a/planet.css
+++ b/planet.css
@@ -41,9 +41,14 @@
   background-color: #00000000;
   z-index: 20;
   box-shadow: inset calc(var(--planetRadius) * -0.1) 0px 10px #000000ee, inset 0 0 calc(var(--planetRadius) * 0.3) #ffffff88, inset 0 0 calc(var(--planetRadius) * 0.05) #ffffff;
-} */
+  } */
+#innerLight {
+  z-index: 19;
+  border-radius: 50%;
+  box-shadow: inset 0 0 calc(var(--planetRadius) * 0.3) #ffffff88, inset 0 0 calc(var(--planetRadius) * 0.05) #ffffff;
+}
 #shadow {
-  --blur:2.5px;
+  --blur: 2.5px;
   border-radius: 50%;
   z-index: 20;
   filter: blur(var(--blur));
